src/test/deca/context/invalid/affectation-wrongTypeAffectationFloatBool.context
affectation-wrongTypeAffectationFloatBool.deca:4: